Added support to change DoH Servers

--- a/templates/cloudflared.j2
+++ b/templates/cloudflared.j2
@@ -1,2 +1,2 @@
 # Commandline args for cloudflared, using Cloudflare DNS
-CLOUDFLARED_OPTS=--port 5053 --upstream https://1.1.1.1/dns-query --upstream https://1.0.0.1/dns-query
+CLOUDFLARED_OPTS=--port 5053 --upstream https://{{ DOH_SERVER_1 }}/dns-query --upstream https://{{ DOH_SERVER_2 }}/dns-query
