remove support for anything below TLS1.2

--- a/templates/nginx-wireguard_rhel_generic.j2
+++ b/templates/nginx-wireguard_rhel_generic.j2
@@ -5,6 +5,8 @@ server {
 
     ssl_certificate     /etc/ssl/certs/{{ SERVER_FQDN }}.crt;
     ssl_certificate_key /etc/ssl/{{ SERVER_FQDN }}.key;
+    ssl_protocols       TLSv1.2 TLSv1.3;
+    ssl_ciphers         HIGH:!aNULL:!MD5;
 
     root /usr/share/nginx/html;
     location / {
